--- a/helmchart/sample-fastapi-app/templates/service.yaml
+++ b/helmchart/sample-fastapi-app/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: python-sample-app-service
-  namespace: ${namespace}
+  name: {{ include "sample-fastapi-app.fullname" . }}
+  namespace: {{ .Values.namespace }}
   annotations: 
     service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
-      protocol: TCP
-      targetPort: 3000
+    - port: {{ .Values.service.port }}
+      protocol: {{ .Values.service.protocol }}
+      targetPort: {{ .Values.service.port }}
   selector:
     app: python-sample-app
