--- a/helmchart/sample-fastapi-app/values.yaml
+++ b/helmchart/sample-fastapi-app/values.yaml
@@ -2,13 +2,14 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+namespace: "ns-helm-demo"
+replicaCount: 3
 
 image:
-  repository: nginx
+  repository: fra.ocir.io/fahdabidiroottenancy/mr-devops-private/sample-python-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -37,8 +38,9 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
+  protocol: TCP
 
 ingress:
   enabled: false
